# dbt-tutorial-course

./: .gitignore  .user.yml  env_var.sh  profiles.yml  pyproject.toml
lessons/: dbt_project.yml
lessons/models/mart/: orders.sql  orders.yml
lessons/models/staging/: stg_ecommerce__events.sql  stg_ecommerce__order_items.yml  stg_ecommerce__orders.sql  stg_ecommerce__orders.yml  stg_ecommerce__products.yml
lessons/snapshots/: snapshot__distribution_centers.sql
lessons/tests/: test_order_details_match_order.sql
