[tool.poetry]
name = "dbt-tutorial-course"
version = "0.1.0"
description = "Aula do Udemy"
authors = ["Fernando Souza"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.4"
dbt-bigquery = "^1.8.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
sqlfluff = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
